# SG-RAPL

./: README.md  compose.base.yaml  compose.deploy.yaml  compose.dev.yaml  pyproject.toml
common_packages/services_api/services_api/: actual_state.py  assistant.py
demo/: main.py
demo/data/: planner_output.json  world_state.json
services/actual_state/: Dockerfile  app.py  pyproject.toml  test_app.py
services/actual_state/src/: base_state.py  langchain_api.py
services/actual_state/tests/: data.py
services/llm_vicuna13b/: Dockerfile  app.py  pyproject.toml  test_app.py
services/llm_vicuna13b/src/: base_model.py  langchain_api.py  model.py
services/llm_vicuna13b/tests/: data.py
services/planner/: Dockerfile  app.py  paper_perception_all_data.py  pyproject.toml  test_app.py  test_paper_request.py
services/planner/src/: langchain_api.py
services/planner/tests/: data.py
services/seg_and_track/src/: conversions.py  depth_map.py  seg_and_track.py
services/seg_and_track/tests/: data.py
