[tool.poetry]
name = "actual_state"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.8.2"
fastapi = {extras = ["standard"], version = "^0.112.0"}
pytest = "^8.3.2"
services-api = {path = "/common_packages/services_api", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

